--- a/public/templates/public/home.html
+++ b/public/templates/public/home.html
@@ -24,14 +24,10 @@
                     </div>
                     {% endif %}
                     <h5 class="card-title mb-2">{{ project.name }}</h5>
-                    {% if project.website_url %}
-                    <a href="{{ project.website_url }}"
-                       class="btn btn-sm btn-outline-primary mt-2"
-                       target="_blank"
-                       rel="noopener">
-                        {% trans "Visit Website" %}
+                    <a href="{% url 'public:project_detail' slug=project.slug %}"
+                       class="btn btn-sm btn-outline-primary mt-2">
+                        {% trans "Read More" %}
                     </a>
-                    {% endif %}
                 </div>
             </div>
         </div>
