feat: Add a page "about"

--- a/public/templates/public/base.html
+++ b/public/templates/public/base.html
@@ -25,6 +25,9 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
+                            <a class="nav-link" href="{% url 'public:about' %}">{% trans "About" %}</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="https://linagora.com/" target="_blank" rel="noopener">LINAGORA</a>
                         </li>
                         <li class="nav-item">
